--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:mysql://127.0.0.1:3307/pi_reinados_web
-spring.datasource.username=root
-spring.datasource.password=projeto#Integrador123
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 logging.level.root=DEBUG
 logging.level.org.springframework=DEBUG
 spring.jpa.hibernate.ddl-auto=create
